# alvium_file_access_example

./: .gitmodules  CMakeLists.txt  README.md
include/: file_access.h  gencp.h
src/: CMakeLists.txt  file_access.cpp  gencp.cpp
tools/: CMakeLists.txt  file_access_read.cpp  file_access_write.cpp
